--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,19 @@ body {
     margin-bottom: 40px;
 }
 
+.logo-link {
+    display: block;
+    text-decoration: none;
+}
+
+.site-logo {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
 .site-title {
     font-size: 1.5em;
     font-weight: 700;
