Fix active menu style for GitHub Pages - normalize paths with TrimSuffix

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,25 +15,27 @@
                     <img src="{{ .Site.BaseURL }}images/logo.png" alt="{{ .Site.Title }}" class="site-logo">
                 </a>
             </div>
+            {{ $currentPage := . }}
+            {{ $currentPath := strings.TrimSuffix "/" $currentPage.RelPermalink }}
             <nav class="sidebar-nav">
                 <div class="nav-group">
                     <div class="nav-group-title">Documents</div>
                     <div class="nav-group-items">
-                        <a href="{{ .Site.BaseURL }}docs/documents/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents/" }} active{{ end }}">docs</a>
-                        <a href="{{ .Site.BaseURL }}docs/documents-icons/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents-icons/" }} active{{ end }}">icons</a>
-                        <a href="{{ .Site.BaseURL }}docs/documents-styles/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents-styles/" }} active{{ end }}">styles</a>
-                        <a href="{{ .Site.BaseURL }}docs/documents-convention/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents-convention/" }} active{{ end }}">convention</a>
-                        <a href="{{ .Site.BaseURL }}docs/documents-components/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents-components/" }} active{{ end }}">components</a>
-                        <a href="{{ .Site.BaseURL }}docs/documents-i18n/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/docs/documents-i18n/" }} active{{ end }}">i18n</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents" }} active{{ end }}">docs</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents-icons/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents-icons" }} active{{ end }}">icons</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents-styles/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents-styles" }} active{{ end }}">styles</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents-convention/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents-convention" }} active{{ end }}">convention</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents-components/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents-components" }} active{{ end }}">components</a>
+                        <a href="{{ .Site.BaseURL }}docs/documents-i18n/" class="nav-item nav-sub-item{{ if eq $currentPath "/docs/documents-i18n" }} active{{ end }}">i18n</a>
                     </div>
                 </div>
                 <div class="nav-group">
                     <div class="nav-group-title">Posts</div>
                     <div class="nav-group-items">
-                        <a href="{{ .Site.BaseURL }}posts/" class="nav-item nav-sub-item{{ if eq .RelPermalink "/posts/" }} active{{ end }}">전체 보기</a>
-                        <a href="{{ .Site.BaseURL }}posts/first-post/" class="nav-item nav-sub-item{{ if or (eq .RelPermalink "/posts/first-post/") (eq .RelPermalink "/posts/first-post") }} active{{ end }}">첫 번째 블로그 포스트</a>
-                        <a href="{{ .Site.BaseURL }}posts/getting-started/" class="nav-item nav-sub-item{{ if or (eq .RelPermalink "/posts/getting-started/") (eq .RelPermalink "/posts/getting-started") }} active{{ end }}">Hugo 시작하기</a>
-                        <a href="{{ .Site.BaseURL }}posts/hugo-tips/" class="nav-item nav-sub-item{{ if or (eq .RelPermalink "/posts/hugo-tips/") (eq .RelPermalink "/posts/hugo-tips") }} active{{ end }}">Hugo 사용 팁</a>
+                        <a href="{{ .Site.BaseURL }}posts/" class="nav-item nav-sub-item{{ if eq $currentPath "/posts" }} active{{ end }}">전체 보기</a>
+                        <a href="{{ .Site.BaseURL }}posts/first-post/" class="nav-item nav-sub-item{{ if eq $currentPath "/posts/first-post" }} active{{ end }}">첫 번째 블로그 포스트</a>
+                        <a href="{{ .Site.BaseURL }}posts/getting-started/" class="nav-item nav-sub-item{{ if eq $currentPath "/posts/getting-started" }} active{{ end }}">Hugo 시작하기</a>
+                        <a href="{{ .Site.BaseURL }}posts/hugo-tips/" class="nav-item nav-sub-item{{ if eq $currentPath "/posts/hugo-tips" }} active{{ end }}">Hugo 사용 팁</a>
                     </div>
                 </div>
             </nav>
